[package]
name = "tardy"
version = "0.1.0"
edition = "2021"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
description = "An asyncronous library for doing later what could be done now."
license = "Apache-2.0"
repository = "https://github.com/crumplecup/tardy"

[dependencies]
config = "0.14.0"
convert_case = "0.6.0"
derive-getters = "0.5.0"
derive-new = "0.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
derive_setters = "0.1.6"
polite = { path = "../cordial/polite", default-features = false, features = [
  "win",
] }
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.4"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winit = "0.30.5"
